--- a/Task-3/index.html
+++ b/Task-3/index.html
@@ -5,40 +5,46 @@
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	</head>
 	<body>
+		<br />
+		<h4 align="center">TODO application</h4>
 		<div class="container">
         <br />
-        <h3>Todo list application</h3><br />
         <div class="row">
-            <div class="col-md-5">
+			<u><h6>Enter a new Task</h6></u>
+			<br /><br />
+            <div class="col-md-3">
                 <input type="text" id="taskName" class="form-control" placeholder="Task name..." />
             </div>
-            <div class="col-md-5">
+            <div class="col-md-3">
                 <select id="taskPriority" class="form-control">
                     <option value="high">High</option>
                     <option value="medium">Medium</option>
                     <option value="low">Low</option>
                 </select>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
+            	<input type="date" id="taskDate" class="form-control" />
+            </div>
+            <div class="col-md-3">
                 <button id="add" type="button" class="btn btn-success btn-block">Add</button>
             </div>
         </div>
 
-        <br />
+        <br /><br />
+		<u><h6>List of all tasks</h6></u><br />
         <table class="table">
             <thead>
                 <tr>
                     <th>Task ID</th>
                     <th>Task Name</th>
                     <th>Priority</th>
-                    <th>Sort</th>
+                    <th>Date</th>
                     <th>Actions</th>
                 </tr>
             </thead>
             <tbody id="tasks_tbody">
             </tbody>
         </table>
-        <input type="date" id="date" class="form-control"/>
         <button id="clear" type="button" class="btn btn-danger btn-block">Clear all data</button>
     </div>
     <script type="text/javascript" src="./script.js"></script>
