--- a/Task-4/client/page.html
+++ b/Task-4/client/page.html
@@ -25,7 +25,8 @@
     <section id="chatFace" class="msger" style="display: none;">
         <header class="msger-header">
             <div class="msger-header-title">
-                <i id="usersCount" class="fas fa-comment-alt"></i>
+                <span id="usersCount" class="fas fa-comment-alt"></span>
+                <i id="usersTyping" class="fas fa-comment-alt"></i>
             </div>
             <div class="msger-header-options">
                 <span id="logoutSpan" style="text-decoration: underline; cursor: pointer;">Logout</span>
@@ -50,6 +51,7 @@
         </table>
     </div>
 
+    <script type="text/javascript" src="js/assets.js"></script>
     <script type="text/javascript" src="js/socket.js"></script>
     <script type="text/javascript" src="js/ui.js"></script>
 </body>
